--- a/hw4_login/Base.lproj/Main.storyboard
+++ b/hw4_login/Base.lproj/Main.storyboard
@@ -1,24 +1,203 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Start View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="StartViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="W94-rQ-ueQ">
+                                <rect key="frame" x="55" y="361" width="320" height="210"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="First Name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="1vE-tk-DzH">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="W38-92-WoN">
+                                        <rect key="frame" x="0.0" y="60" width="320" height="34"/>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JAv-qN-6uz">
+                                        <rect key="frame" x="0.0" y="119.99999999999999" width="320" height="34.333333333333329"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Log In"/>
+                                        <connections>
+                                            <segue destination="j4l-tB-wsz" kind="showDetail" id="Bjv-1J-sk3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcW-Mn-NKf">
+                                        <rect key="frame" x="0.0" y="180.33333333333337" width="320" height="29.666666666666657"/>
+                                        <color key="tintColor" systemColor="systemGreenColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Forgot account?">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="W94-rQ-ueQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="CFb-ju-D74"/>
+                            <constraint firstItem="W94-rQ-ueQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YAL-Sw-SuH"/>
+                            <constraint firstItem="W94-rQ-ueQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iaT-e1-wcN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W94-rQ-ueQ" secondAttribute="trailing" constant="55" id="jfd-mZ-EsY"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="UD0-JB-Gso"/>
+                    <connections>
+                        <outlet property="buttonLogIn" destination="JAv-qN-6uz" id="VkT-mO-auN"/>
+                        <outlet property="firstName" destination="1vE-tk-DzH" id="QcK-Mn-g8U"/>
+                        <outlet property="password" destination="W38-92-WoN" id="fev-xy-aah"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="101.5267175572519" y="4.9295774647887329"/>
+        </scene>
+        <!--Welcome-->
+        <scene sceneID="PkI-1n-oXV">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="KMn-lb-3J8" customClass="ViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JwV-HL-dG7">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="7Yk-1V-2LY">
+                                <rect key="frame" x="82" y="331.33333333333331" width="266" height="200.66666666666669"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2d-3D-aXZ">
+                                        <rect key="frame" x="48.666666666666671" y="0.0" width="168.66666666666663" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🦀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V51-fM-KCu">
+                                        <rect key="frame" x="79" y="81" width="108" height="119.66666666666669"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rh7-Oo-Li6">
+                                <rect key="frame" x="120" y="659.66666666666663" width="190" height="34.333333333333371"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Log out"/>
+                                <connections>
+                                    <action selector="logOut:" destination="KMn-lb-3J8" eventType="touchUpInside" id="oVl-Fp-N2n"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="4bD-pG-l9H"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Z54-pB-y6v"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Z54-pB-y6v" firstAttribute="trailing" secondItem="7Yk-1V-2LY" secondAttribute="trailing" constant="82" id="4A6-C1-MtG"/>
+                            <constraint firstItem="Z54-pB-y6v" firstAttribute="bottom" secondItem="Rh7-Oo-Li6" secondAttribute="bottom" constant="120" id="Fz6-Qd-B0e"/>
+                            <constraint firstItem="7Yk-1V-2LY" firstAttribute="centerY" secondItem="JwV-HL-dG7" secondAttribute="centerY" id="Uh8-vw-9fh"/>
+                            <constraint firstItem="Rh7-Oo-Li6" firstAttribute="leading" secondItem="Z54-pB-y6v" secondAttribute="leading" constant="120" id="lVw-X3-RHN"/>
+                            <constraint firstItem="7Yk-1V-2LY" firstAttribute="leading" secondItem="Z54-pB-y6v" secondAttribute="leading" constant="82" id="q9Q-QO-mKJ"/>
+                            <constraint firstItem="Z54-pB-y6v" firstAttribute="trailing" secondItem="Rh7-Oo-Li6" secondAttribute="trailing" constant="120" id="zV0-GD-gp7"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Welcome" image="shareplay" catalog="system" id="mRv-Ul-kDI">
+                        <color key="badgeColor" systemColor="systemGreenColor"/>
+                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="ri3-Ju-rJe"/>
+                    <connections>
+                        <outlet property="outButton" destination="Rh7-Oo-Li6" id="JMO-Q6-fPW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dBX-Tq-dGe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1976" y="-662"/>
+        </scene>
+        <!--Friend-->
+        <scene sceneID="K8e-3H-nFq">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="hRf-tO-Imp" customClass="OneViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wjk-KD-KIu">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3F-0y-lF4">
+                                <rect key="frame" x="120" y="659" width="190" height="35"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Log out"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="showDetail" id="Vku-Tx-cYC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="b4P-Wn-oa7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="H3F-0y-lF4" firstAttribute="leading" secondItem="b4P-Wn-oa7" secondAttribute="leading" constant="120" id="eFc-d6-hmx"/>
+                            <constraint firstItem="b4P-Wn-oa7" firstAttribute="trailing" secondItem="H3F-0y-lF4" secondAttribute="trailing" constant="120" id="fGA-37-Je7"/>
+                            <constraint firstItem="b4P-Wn-oa7" firstAttribute="bottom" secondItem="H3F-0y-lF4" secondAttribute="bottom" constant="120" id="pKa-wR-GzZ"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Friend" image="person.2.fill" catalog="system" id="FPe-N6-HAR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BMW-wM-bSq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1975.8139534883721" y="7.7253218884120178"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="o7M-X8-TuZ">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="j4l-tB-wsz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cSy-bF-XtR">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="hRf-tO-Imp" kind="relationship" relationship="viewControllers" id="DrQ-6o-RLo"/>
+                        <segue destination="KMn-lb-3J8" kind="relationship" relationship="viewControllers" id="bM2-zP-BlM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9AG-IU-40J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1053" y="8"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Vku-Tx-cYC"/>
+    </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.33637201919980286" green="0.94336753500000003" blue="0.31941570174416917" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+    <resources>
+        <image name="person.2.fill" catalog="system" width="128" height="81"/>
+        <image name="shareplay" catalog="system" width="128" height="75"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
