--- a/hw4_login/Base.lproj/Main.storyboard
+++ b/hw4_login/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -14,41 +14,45 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="StartViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="W94-rQ-ueQ">
-                                <rect key="frame" x="55" y="361" width="320" height="210"/>
+                                <rect key="frame" x="55" y="228.5" width="265" height="210.5"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="First Name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="1vE-tk-DzH">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="1vE-tk-DzH">
+                                        <rect key="frame" x="0.0" y="0.0" width="265" height="34"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="W38-92-WoN">
-                                        <rect key="frame" x="0.0" y="60" width="320" height="34"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="W38-92-WoN">
+                                        <rect key="frame" x="0.0" y="60" width="265" height="34"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JAv-qN-6uz">
-                                        <rect key="frame" x="0.0" y="119.99999999999999" width="320" height="34.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="120" width="265" height="34.5"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Log In"/>
                                         <connections>
+                                            <action selector="logInbutton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HKs-Nd-eoP"/>
                                             <segue destination="j4l-tB-wsz" kind="showDetail" id="Bjv-1J-sk3"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcW-Mn-NKf">
-                                        <rect key="frame" x="0.0" y="180.33333333333337" width="320" height="29.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="180.5" width="265" height="30"/>
                                         <color key="tintColor" systemColor="systemGreenColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Forgot account?">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="forgotAccount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9b9-mv-6Ag"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -78,20 +82,20 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="KMn-lb-3J8" customClass="ViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JwV-HL-dG7">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="7Yk-1V-2LY">
-                                <rect key="frame" x="82" y="331.33333333333331" width="266" height="200.66666666666669"/>
+                                <rect key="frame" x="82" y="223.5" width="211" height="200.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h2d-3D-aXZ">
-                                        <rect key="frame" x="48.666666666666671" y="0.0" width="168.66666666666663" height="30"/>
+                                        <rect key="frame" x="21" y="0.0" width="169" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🦀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V51-fM-KCu">
-                                        <rect key="frame" x="79" y="81" width="108" height="119.66666666666669"/>
+                                        <rect key="frame" x="51.5" y="81" width="108" height="119.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -99,7 +103,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rh7-Oo-Li6">
-                                <rect key="frame" x="120" y="659.66666666666663" width="190" height="34.333333333333371"/>
+                                <rect key="frame" x="120" y="443.5" width="135" height="34.5"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -138,11 +142,11 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="hRf-tO-Imp" customClass="OneViewController" customModule="hw4_login" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wjk-KD-KIu">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3F-0y-lF4">
-                                <rect key="frame" x="120" y="659" width="190" height="35"/>
+                                <rect key="frame" x="120" y="443" width="135" height="35"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -151,20 +155,51 @@
                                     <segue destination="BYZ-38-t0r" kind="showDetail" id="Vku-Tx-cYC"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello brother! How Are You?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CkK-7t-r9X">
+                                <rect key="frame" x="30.5" y="128" width="314" height="31.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter an answer" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pH0-VM-knn">
+                                <rect key="frame" x="40" y="211.5" width="295" height="34"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🪳" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2A-f8-H9r">
+                                <rect key="frame" x="144" y="290" width="87" height="96"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="b4P-Wn-oa7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="CkK-7t-r9X" firstAttribute="top" secondItem="b4P-Wn-oa7" secondAttribute="top" constant="128" id="BOm-VG-8Qq"/>
+                            <constraint firstItem="pH0-VM-knn" firstAttribute="top" secondItem="CkK-7t-r9X" secondAttribute="bottom" constant="52" id="H44-ub-b5l"/>
+                            <constraint firstItem="b4P-Wn-oa7" firstAttribute="trailing" secondItem="pH0-VM-knn" secondAttribute="trailing" constant="40" id="Iyn-fj-sBb"/>
+                            <constraint firstItem="w2A-f8-H9r" firstAttribute="leading" secondItem="b4P-Wn-oa7" secondAttribute="leading" constant="144" id="LnS-Bl-wJJ"/>
+                            <constraint firstItem="b4P-Wn-oa7" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CkK-7t-r9X" secondAttribute="trailing" id="NHc-Vh-MCG"/>
+                            <constraint firstItem="pH0-VM-knn" firstAttribute="leading" secondItem="b4P-Wn-oa7" secondAttribute="leading" constant="40" id="VP1-WM-Idx"/>
+                            <constraint firstItem="b4P-Wn-oa7" firstAttribute="trailing" secondItem="w2A-f8-H9r" secondAttribute="trailing" constant="144" id="WEk-9h-bqH"/>
                             <constraint firstItem="H3F-0y-lF4" firstAttribute="leading" secondItem="b4P-Wn-oa7" secondAttribute="leading" constant="120" id="eFc-d6-hmx"/>
                             <constraint firstItem="b4P-Wn-oa7" firstAttribute="trailing" secondItem="H3F-0y-lF4" secondAttribute="trailing" constant="120" id="fGA-37-Je7"/>
+                            <constraint firstItem="w2A-f8-H9r" firstAttribute="top" secondItem="pH0-VM-knn" secondAttribute="bottom" constant="44.5" id="htp-KW-4mg"/>
+                            <constraint firstItem="CkK-7t-r9X" firstAttribute="centerX" secondItem="Wjk-KD-KIu" secondAttribute="centerX" id="n0U-YE-jTr"/>
                             <constraint firstItem="b4P-Wn-oa7" firstAttribute="bottom" secondItem="H3F-0y-lF4" secondAttribute="bottom" constant="120" id="pKa-wR-GzZ"/>
+                            <constraint firstItem="CkK-7t-r9X" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="b4P-Wn-oa7" secondAttribute="leading" id="rsb-U5-C3E"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Friend" image="person.2.fill" catalog="system" id="FPe-N6-HAR"/>
+                    <connections>
+                        <outlet property="logOut" destination="H3F-0y-lF4" id="XUp-5v-vaY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BMW-wM-bSq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1975.8139534883721" y="7.7253218884120178"/>
+            <point key="canvasLocation" x="1975.2" y="7.6461769115442282"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="o7M-X8-TuZ">
@@ -195,6 +230,9 @@
         <image name="shareplay" catalog="system" width="128" height="75"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
